# xixicode

./: .gitignore  PROGRESS.md  README.md  REASONIX.md  pyproject.toml  spec.md  unfinish.md
skills/builtins/: bug_fix.yaml  code_review.yaml  explore.yaml  refactor.yaml  write_test.yaml
src/minicode/: __init__.py  config.py  events.py  main.py  session.py  tui.py
src/minicode/agent/: loop.py  planner.py  reflection.py
src/minicode/context/: builder.py  compressor.py
src/minicode/context/templates/: system.j2
src/minicode/llm/: client.py  router.py
src/minicode/mcp/: __init__.py  client.py  tools.py
src/minicode/memory/: manager.py  retriever.py  store.py
src/minicode/security/: approval.py  classifier.py  injection.py  pipeline.py  rules.py
src/minicode/skill/: loader.py  registry.py  router.py
src/minicode/tool/: ask.py  background.py  base.py  command.py  file.py  git.py  mock.py  patch.py  registry.py  search.py  storage.py  test.py  web.py
tests/: conftest.py  test_loop.py
tests/agent/: test_planner.py
tests/context/: test_builder.py
tests/memory/: test_manager.py  test_store.py
tests/security/: test_rules.py
tests/skill/: test_loader.py  test_registry.py
tests/tool/: conftest.py  test_edit_file.py  test_grep.py  test_list_directory.py  test_read_file.py  test_registry.py  test_run_command.py
