[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minicode"
version = "0.1.0"
description = "MiniCode — 面向本地代码仓库的 AI Coding Agent"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Deng Xiaoyi"}]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.25",
    "jinja2>=3.1",
    "structlog>=24.0",
    "sqlite-vec>=0.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[project.scripts]
minicode = "minicode.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
